# SoftFloat-3a

./: .travis.yml  .travis_build.sh  1Stop  1Stop.cmd  BUILDING  BUILDING.txt  CHANGELOG.txt  CMakeLists.txt  ERRATA  README.md  SoftFloat_VS2008.sln  SoftFloat_VS2008.vcproj  SoftFloat_VS2015.sln  SoftFloat_VS2015.vcxproj  SoftFloat_VS2015.vcxproj.filters  SoftFloat_VS2017.sln  SoftFloat_VS2017.vcxproj  SoftFloat_VS2017.vcxproj.filters  build  build.cmd  cflags.txt  cpack.txt  extra.txt  headers.txt  includes.txt  normalize.rx  package.pc.in  platform.h.in  platform.h.in.Windows  project.txt  sources.txt  srorso.txt  stdbool.h.in  stdint.h.in  vstools.cmd
cmake/modules/: CapitalizeWord.cmake  CheckHeader.cmake  ConfigHandler.cmake  GIT_Revision.cmake  HG_Revision.cmake  ParseBinaryDir.cmake  ParseOption.cmake  Trace.cmake  Vdump.cmake
hercsource/: f128_roundToInt.c  f128_scaledResult.c  f32_roundToInt.c  f32_scaledResult.c  f64_roundToInt.c  f64_scaledResult.c  h390s3fh.def  h390sf3h.def  s_addMagsF128.c  s_addMagsF32.c  s_addMagsF64.c  s_mulAddF32.c  s_mulAddF64.c  s_propagateNaNF128UI.c  s_propagateNaNF32UI.c  s_propagateNaNF64UI.c  s_roundPackToF128.c  s_roundPackToF32.c  s_roundPackToF64.c  s_roundToI32.c  s_roundToI64.c  s_roundToUI32.c  s_roundToUI64.c  s_subMagsF32.c  s_subMagsF64.c  softfloat.h  softfloat_state.c
source/: extF80M_add.c  extF80M_div.c  extF80M_eq.c  extF80M_eq_signaling.c  extF80M_le.c  extF80M_le_quiet.c  extF80M_lt.c  extF80M_lt_quiet.c  extF80M_mul.c  extF80M_rem.c  extF80M_roundToInt.c  extF80M_sqrt.c  extF80M_sub.c  extF80M_to_f128M.c  extF80M_to_f16.c  extF80M_to_f32.c  extF80M_to_f64.c  extF80M_to_i32.c  extF80M_to_i32_r_minMag.c  extF80M_to_i64.c  extF80M_to_i64_r_minMag.c  extF80M_to_ui32.c  extF80M_to_ui32_r_minMag.c  extF80M_to_ui64.c  extF80M_to_ui64_r_minMag.c  extF80_add.c  extF80_div.c  extF80_eq.c  extF80_eq_signaling.c  extF80_isSignalingNaN.c  extF80_le.c  extF80_le_quiet.c  extF80_lt.c  extF80_lt_quiet.c  extF80_mul.c  extF80_rem.c  extF80_roundToInt.c  extF80_sqrt.c  extF80_sub.c  extF80_to_f128.c  (+285 more)
source/8086/: f128M_isSignalingNaN.c  s_commonNaNToExtF80UI.c  s_commonNaNToF16UI.c  s_commonNaNToF64UI.c  s_f128MToCommonNaN.c  s_f128UIToCommonNaN.c  s_f32UIToCommonNaN.c  s_f64UIToCommonNaN.c  s_propagateNaNExtF80M.c  s_propagateNaNF128M.c  s_propagateNaNF128UI.c  s_propagateNaNF16UI.c  s_propagateNaNF32UI.c  s_propagateNaNF64UI.c  softfloat_raiseFlags.c  specialize.h
source/8086-SSE/: s_commonNaNToExtF80M.c  s_commonNaNToF128M.c  s_commonNaNToF128UI.c  s_commonNaNToF32UI.c  s_extF80MToCommonNaN.c  s_extF80UIToCommonNaN.c  s_f16UIToCommonNaN.c  s_propagateNaNExtF80UI.c  s_propagateNaNF128M.c  s_propagateNaNF128UI.c  s_propagateNaNF16UI.c  s_propagateNaNF32UI.c  s_propagateNaNF64UI.c  specialize.h
source/ARM-VFPv2/: s_commonNaNToExtF80M.c  s_commonNaNToExtF80UI.c  s_commonNaNToF128M.c  s_commonNaNToF128UI.c  s_commonNaNToF16UI.c  s_commonNaNToF32UI.c  s_commonNaNToF64UI.c  s_extF80MToCommonNaN.c  s_extF80UIToCommonNaN.c  s_f128MToCommonNaN.c  s_f128UIToCommonNaN.c  s_f16UIToCommonNaN.c  s_f32UIToCommonNaN.c  s_f64UIToCommonNaN.c  s_propagateNaNExtF80M.c  s_propagateNaNExtF80UI.c  s_propagateNaNF128M.c  s_propagateNaNF128UI.c  s_propagateNaNF16UI.c  s_propagateNaNF32UI.c  s_propagateNaNF64UI.c  softfloat_raiseFlags.c  specialize.h
source/ARM-VFPv2-defaultNaN/: extF80M_isSignalingNaN.c  s_commonNaNToExtF80M.c  s_commonNaNToExtF80UI.c  s_commonNaNToF128M.c  s_commonNaNToF128UI.c  s_propagateNaNExtF80M.c  s_propagateNaNExtF80UI.c  s_propagateNaNF128M.c  s_propagateNaNF128UI.c  s_propagateNaNF16UI.c  s_propagateNaNF32UI.c  s_propagateNaNF64UI.c  specialize.h
source/include/: internals.h  opts-GCC.h  primitiveTypes.h  primitives.h  softfloat.h  softfloat_stdTypes.h
tools/: BuildMe  BuildMe.cmd  InstallMe  InstallMe.cmd  MakeDirs  MakeDirs.cmd  SF3a4Herc.nsi  SF3a4HercLicense.rtf  normalize_includes.rx  path.here  rexxutil.cls
